@@ -1,4 +1,7 @@
 Next:
+  - If minimum mcb free is not set and memory size is less than 256KB,
+    automatically set minimum mcb free to minimum mcb segment, in order
+    to release more available memory within the limited space (joncampbell123).
   - Do not enable XMS emulation if system memory size is 1MB or less. (joncampbell123)
   - DOS drive cache: When listing a directory, defer the filename sort until
     the entire list is built. This improves directory listing performance
